--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@
     left: 0px;
     display: none;
     width: 200px;
-    background: #a42ad4;
+    background: #35cf5c;
 }
 
 #menu1 ul li:hover ul {
