--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ main {
     left: 0px;
     display: none;
     width: 200px;
-    background: #35cf5c;
+    background: #40ca63;
 }
 
 #menu1 ul li:hover ul {
