--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,43 @@
-header,
-footer {
-    background-color: #a42ad4;
-    padding: 10px;
-}
-
-main {
-    padding: 10px;
-    background-color: silver;
-}
-
-.post {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
+.main-box {
     display: flex;
+    flex-wrap: wrap;
+    gap: 130px;
+    padding: 50px;
 }
-
-.post img {
-    margin: 20px;
-}
-
-.footer-columns {
-    display: flex;
-}
-
-.footer-column {
-    flex: 50%;
-    margin: 20px;
-}
-
-.post-info {
-    color: grey;
-}
-
-.comment {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 10px;
-}
-
-.author {
-    margin-top: 0px;
-    margin-bottom: 10px;
-}
-
-.date {
-    color: silver;
-    margin-top: 0px;
-    margin-bottom: 10px;
-}
-
-#sub-comment {
-    margin-left: 40px;
-}
-
-#menu1 {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: auto;
-    z-index: 10;
-}
-
-#menu1 ul {
-    position: relative;
-    display: block;
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height: auto;
+ul {
     list-style: none;
 }
 
-#menu1>ul::after {
-    display: block;
-    width: 100%;
-    height: 0px;
-    clear: both;
-    content: " ";
+.boxes {
+    margin-right: 20px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-left: 10px;
+    width: 600px;
+    height: 390px;
+    background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(255, 171, 0, 1) 10%, rgba(255, 171, 0, 1) 20%, rgba(255, 0, 0, 1) 35%, rgba(255, 252, 0, 1) 50%, rgba(255, 0, 0, 1) 65%, rgba(255, 171, 0, 1) 80%, rgba(255, 171, 0, 1) 90%, rgba(255, 0, 0, 1) 100%);
+    -webkit-box-shadow: 0px 0px 0px 8px #000000, 0px 0px 0px 16px #3c3d3c, 0px 0px 0px 24px #828482, 0px 0px 0px 31px #B2B5B2, 0px 0px 0px 39px #DADDDA, 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 0px 8px #000000, 0px 0px 0px 16px #3c3d3c, 0px 0px 0px 24px #828482, 0px 0px 0px 31px #B2B5B2, 0px 0px 0px 39px #DADDDA, 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
 }
 
-#menu1 ul li {
-    position: relative;
-    display: block;
-    float: left;
-    width: auto;
-    height: auto;
+.pets-food {
+    font-size: 35px;
+    font-weight: bolt;
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 10px;
 }
 
-#menu1 ul li a {
-    display: block;
-    padding: 9px 25px 0px 25px;
-    font-size: 14px;
-    line-height: 1.3em;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: uppercase;
-    height: 36px;
-    box-sizing: border-box;
-    color: white;
+p{
+    font-size: 50px;
+    padding: 10px;
+    text-align: center;
+    color: #00ff00;
 }
-
-#menu1 ul li ul {
-    position: absolute;
-    top: 36px;
-    left: 0px;
-    display: none;
-    width: 200px;
-    background: #40ca63;
+body{
+    background: rgb(131, 58, 180);
+        background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
 }
-
-#menu1 ul li:hover ul {
-    display: block;
-}
-
-#menu1 ul li ul li {
-    float: none;
-    width: 100%;
-}
-
-#menu1 ul li ul li a {
-    display: block;
-    text-transform: none;
-    height: auto;
-    padding: 7px 25px;
-    width: 100%;
-    box-sizing: border-box;
-    border-top: 1px solid #ffffff;
-    color: white;
-}
-
-#menu1 ul li ul li:first-child a {
-    border-top: 0px;
-}
-
-h3:hover {
-    color: red;
-    transition: all 0.3s ease 0s;
-}
-
-img:hover {
-    border-radius: 100px;
-    transition: all 0.3s ease 0s;
+iframe{
+    padding: 20px;
 }
